# jax-array-info

./: .gitignore  README.md  pyproject.toml
jax_array_info/: __init__.py  array_stats.py  memory_stats.py  sharding_info.py  sharding_vis.py  utils.py
tests/: cluster_test.sh  fft_utils.py  jaxtest.py  multihost.py  test_hlo.py  test_jax.py  test_multihost.py  test_utils.py
