[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-array-info"
version = "0.0.1"
authors = [
    { name = "Lukas Winkler", email = "python@lw1.at" },
]
description = "Debugging tool to print information (especially sharding) about jax arrays"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.8",
    "rich"
]

[project.urls]
"Homepage" = "https://github.com/Findus23/jax-array-info"
"Bug Tracker" = "https://github.com/Findus23/jax-array-info/issues"
